add new updated cmake system
features:
* cleaner
* removed some overhead
* working ipc support for visual studio
* general adjustments regarding compilation speed
* will work for CEF as well

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,31 @@
+## Definitions for both the Client and the Server
+## Mainly detecting Libs is done here
+
+
+# Wrong folder: User attempted to generate from src instead of the main-inexor folder
+if(NOT DEFINED PROJECT_ARCH)
+    message(FATAL_ERROR "You are generating from the wrong folder! \"Where is the Source:\" (currently: ${MAINDIR}) should point to the Main directory (!) of Inexor")
+endif()
+
+
+# Core Libs
 find_package(ZLIB REQUIRED)
 
 find_package(OpenGL)
 find_package(PkgConfig)
 
+
+# Allow disabling Server/Client-subproject
 option(BUILD_CLIENT "Build the client" ${OPENGL_FOUND})
-option(BUILD_SERVER "Build the server" 1)
+option(BUILD_SERVER "Build the server" ON)
 
-if(${BUILD_TARGET_WINDOWS} AND ${CMAKE_C_COMPILER} MATCHES "mingw")
-    set(BUILD_EXTRA_LIBS ${BUILD_EXTRA_LIBS} -static-libgcc)
-endif()
 
-message(STATUS "Detecting SDL2...")
-if(NOT ${BUILD_TARGET_WINDOWS} AND NOT ${BUILD_TARGET_OSX})
+message(STATUS "Detecting Libs...")
+
+# Linux Libraries for Server AND Client
+if(OS_LINUX)
+
+    # SDL (crossplatform Library for anything general)
     if(NOT BUILD_SDL2_LOCAL AND PKG_CONFIG_FOUND)
         message(STATUS "Using pkg-config to detect SDL2...")
         pkg_check_modules(SDL2 QUIET sdl2)
@@ -31,7 +45,26 @@ if(NOT ${BUILD_TARGET_WINDOWS} AND NOT ${BUILD_TARGET_OSX})
     endif()
     set(SDL2_LIBRARIES "${SDL2_LIBRARIES};SDL2_image;SDL2_mixer")
     add_definitions(-D_REENTRANT -D_THREAD_SAFE)
-elseif(${BUILD_TARGET_OSX})
+
+
+    # ENet networking library
+    if(NOT DEFINED ENET_LIBRARIES AND NOT DEFINED LOCAL_ENET)
+        set(LOCAL_ENET 1 CACHE INTERNAL "Use local enet library")
+    elseif(DEFINED LOCAL_ENET)
+        set(LOCAL_ENET ${LOCAL_ENET} CACHE INTERNAL "Use local enet library")
+    else()
+        set(LOCAL_ENET 0 CACHE INTERNAL "Use local enet library")
+    endif()
+
+    if(${LOCAL_ENET})
+        message(STATUS "Building local ENet")
+        add_subdirectory(libraries/enet)
+    endif()
+endif()
+
+
+# MACOSX Libraries for Server AND Client
+if(OS_MACOSX)
     find_library(SDL2_LIBRARY SDL2)
     find_library(SDL2_IMAGE_LIBRARY SDL2_image)
     find_library(SDL2_MIXER_LIBRARY SDL2_mixer)
@@ -40,56 +73,68 @@ elseif(${BUILD_TARGET_OSX})
     find_library(COCOA_LIBRARY Cocoa)
 
     set(SDL2_LIBRARIES "${SDL2_LIBRARY};${SDL2_MIXER_LIBRARY};${SDL2_IMAGE_LIBRARY};${CORESERVICES_LIBRARY};${COCOA_LIBRARY}")
-    
+
     find_path(SDL2_INCLUDE_DIR SDL.h)
     find_path(SDL2_IMAGE_INCLUDE_DIR SDL2_image.h)
     find_path(SDL2_MIXER_INCLUDE_DIR SDL2_mixer.h)
     set(SDL2_INCLUDE_DIRS "${SDL2_INCLUDE_DIR};${SDL2_IMAGE_INCLUDE_DIR};${SDL2_MIXER_INCLUDE_DIR}")
-    #include_directories(${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIR})
 endif()
 
-# TODO: This should go insted net/
-message(STATUS "Detecting ASIO...")
-find_path(ASIO_INCLUDE_DIRS asio.hpp)
-if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  message(STATUS "Using ASIO in standalone mode")
-  add_definitions(-DASIO_STANDALONE)
-else()
-  message(STATUS "Using ASIO with boost. Detecting Boost...")
+
+# POSIX Libraries
+if(OS_MACOSX OR OS_LINUX)
+
+    # ASIO package detection     TODO: This should go inside net/
+    message(STATUS "Detecting ASIO...")
+    find_path(ASIO_INCLUDE_DIRS asio.hpp)
+
+    # Clang + ASIO require boost
+    if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+      message(STATUS "Using ASIO in standalone mode")
+      add_definitions(-DASIO_STANDALONE)
+    else()
+      message(STATUS "Using ASIO with boost. Detecting Boost...")
+    endif()
+
+    # TODO: This should go inside rpc/
+    message(STATUS "Detecting Protobuf...")
+    find_library(PROTOBUF_LIBRARIES protobuf)
+    find_PATH(PROTOBUF_INCLUDE_DIRS google/protobuf/service.h)
 endif()
 
-# TODO: This should go inside rpc/
-message(STATUS "Detecting Protobuf...")
-find_library(PROTOBUF_LIBRARIES protobuf)
-find_PATH(PROTOBUF_INCLUDE_DIRS google/protobuf/service.h)
 
-# TODO: This should go inside rpc/
+# Windows Libraries for Server AND Client
+if(OS_WINDOWS)
+    if(NOT MSVC)
+        set(ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} -static-libgcc -static-libstdc++)
+    endif()
+    set(ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} kernel32 ws2_32 winmm)
+
+    add_definitions(-DASIO_STANDALONE)
+endif()
+
+
+# Generate protobuf-Headers from its general definition file (.proto -> .h and .c)
 if (NOT DEFINED PROTOC_EXE)
   set(PROTOC_EXE "protoc")
 endif()
+
+execute_process(COMMAND ${PROTOC_EXE} -I=${SOURCE_DIR}/rpc/ --cpp_out=${SOURCE_DIR}/rpc/ ${SOURCE_DIR}/rpc/inexor_service.proto
+               WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+
 add_custom_command(
   OUTPUT rpc/inexor_service.pb.h rpc/inexor_service.pb.cc
-  COMMAND ${PROTOC_EXE} --proto_path=${CMAKE_CURRENT_SOURCE_DIR} --cpp_out=${CMAKE_BINARY_DIR}/src/ ${CMAKE_CURRENT_SOURCE_DIR}/rpc/inexor_service.proto
+  COMMAND ${PROTOC_EXE} --proto_path=${SOURCE_DIR}/rpc/ --cpp_out=${SOURCE_DIR}/rpc/ ${SOURCE_DIR}/rpc/inexor_service.proto
   DEPENDS rpc/inexor_service.proto
 )
+
 add_custom_target(inexor_rpc_protobuf DEPENDS
-    ${CMAKE_BINARY_DIR}/src/rpc/inexor_service.pb.h
-    ${CMAKE_BINARY_DIR}/src/rpc/inexor_service.pb.cc)
+    ${SOURCE_DIR}/rpc/inexor_service.pb.h
+    ${SOURCE_DIR}/rpc/inexor_service.pb.cc)
 
-if(NOT DEFINED ENET_LIBRARIES AND NOT DEFINED LOCAL_ENET)
-    set(LOCAL_ENET 1 CACHE INTERNAL "Use local enet library")
-elseif(DEFINED LOCAL_ENET)
-    set(LOCAL_ENET ${LOCAL_ENET} CACHE INTERNAL "Use local enet library")
-else()
-    set(LOCAL_ENET 0 CACHE INTERNAL "Use local enet library")
-endif()
+# MuParser Lib for parsing mathematical expressions
+set(MUPARSER_INCLUDE_DIRS "${SOURCE_DIR}/libraries/muparser/include")
 
-if(${LOCAL_ENET})
-    message(STATUS "Building local ENet")
-    add_subdirectory(libraries/enet)
-endif()
-
-set(MUPARSER_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src/libraries/muparser/include")
 
 include_directories(
     ${ENET_INCLUDE_DIRS}
@@ -97,48 +142,65 @@ include_directories(
     ${MUPARSER_INCLUDE_DIRS}
     ${ASIO_INCLUDE_DIRS}
     ${PROTOBUF_INCLUDE_DIRS}
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/shared
-    ${CMAKE_CURRENT_SOURCE_DIR}/engine
-    ${CMAKE_CURRENT_SOURCE_DIR}/game
-    ${CMAKE_BINARY_DIR}/src/
+    ${SOURCE_DIR}
+    ${SOURCE_DIR}/shared
+    ${SOURCE_DIR}/engine
+    ${SOURCE_DIR}/fpsgame
 )
 
-# Builds source groups for MSVC
-function(sb_msvc_build_source_groups TARGET)
-    if(MSVC)
-        message(STATUS "Setting up source groups.")
 
-        string(TOUPPER "${TARGET}" TARGET)
-        string(TOUPPER "${ARGN}" GROUPS)
+# Set names of Source Files (prepend correct path)
+function(create_names TARGET)
+    message(STATUS "Appending names")
+    string(TOUPPER "${TARGET}" TARGET)
+    string(TOUPPER "${ARGN}" GROUPS)
 
-        foreach(GROUP ${GROUPS})
-            set(SOURCE_GROUP_${GROUP} "")
-            foreach(FILE "${${TARGET}_SOURCES_${GROUP}};${${TARGET}_HEADERS_${GROUP}}")
-                set(SOURCE_GROUP_${GROUP}
-                    ${SOURCE_GROUP_${GROUP}}
-                    ${FILE}.cpp
-                    ${FILE}.h)
-                message(STATUS "Adding ${TARGET}_{SOURCES,HEADERS}_${GROUP} -> ${FILE}")
+    foreach(GROUP ${GROUPS})
+
+        # Sources:
+        set(SOURCE_GROUP_${GROUP} "")
+        foreach(FILE ${${TARGET}_SOURCES_${GROUP}})
+            set(SOURCE_GROUP_${GROUP}
+                ${SOURCE_GROUP_${GROUP}}
+                ${SOURCE_DIR}/${FILE})
+            #message(STATUS "Prepend path for ${FILE} (becoming ${SOURCE_DIR}/${FILE})")
+        endforeach(FILE)
+
+        # Replace old Source Array
+        set(${TARGET}_SOURCES_${GROUP} ${SOURCE_GROUP_${GROUP}} PARENT_SCOPE)
+
+        # For Visual Studio create filter groups as well
+        if(MSVC)
+            message(STATUS "Setting up Filter group ${GROUP}")
+
+            # We want the Header files in our Solution Explorer as well:
+            set(HEADER_GROUP_${GROUP} "")
+            foreach(FILE ${${TARGET}_HEADERS_${GROUP}})
+                set(HEADER_GROUP_${GROUP}
+                    ${HEADER_GROUP_${GROUP}}
+                    ${SOURCE_DIR}/${FILE})
             endforeach(FILE)
-            string(SUBSTRING ${GROUP} 0 1 GROUPNAME1)
+
+            # Replace old Header Array
+            set(${TARGET}_HEADERS_${GROUP} ${HEADER_GROUP_${GROUP}} PARENT_SCOPE)
+
+            # Create filter:
             string(TOLOWER ${GROUP} GROUPNAME)
-            if(GROUP_NAME_CAMEL_CASE)
-                string(REGEX REPLACE "^.(.*)" "${GROUPNAME1}\\1" GROUPNAME "${GROUPNAME}")
-            endif()
-            source_group(${GROUPNAME} FILES ${SOURCE_GROUP_${GROUP}}})
-        endforeach(GROUP)
-    endif()
+            source_group(${GROUPNAME} FILES ${SOURCE_GROUP_${GROUP}} ${HEADER_GROUP_${GROUP}})
+        endif()
+
+    endforeach(GROUP)
 endfunction()
 
+# Subprojects Client and Server
 if(${BUILD_CLIENT})
     add_subdirectory(client)
 else()
-    message(WARNING "not building the client")
+    message(STATUS "not building the client")
 endif()
 
 if(${BUILD_SERVER})
     add_subdirectory(server)
 else()
-    message(WARNING "not building the server")
+    message(STATUS "not building the server")
 endif()
